# linux-dotfiles

./: .Xdefaults  .bash_profile  .bashrc  .dan-env.example  .gitignore  .inputrc  .spacemacs  .stow-local-ignore  .vimrc  README.md  config  make-links  packages.md
.config/dunst/: dunstrc
.config/i3/: config  rofi.conf
.config/i3/scripts/: suspend.sh
.config/nvim/: .netrwhist  init.vim
.config/nvim/syntax/: haskell.vim
.config/picom/: picom.conf
.config/polybar/: config  launch-i3.sh  launch.sh
.config/qutebrowser/: autoconfig.yml
.config/rofi/: color-scheme.conf
.config/termite/: config
.doom.d/: config.el  init.el  packages.el
.xmonad/: build  my-xmonad.cabal  stack.yaml  xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs
Scripts/: lock  suspend
bash/: bashrc
ctags/: ctags
i3/: .config.swp  config
vim/: vimrc
